--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"mysql": "",
-		"mocha": "^5.0.1",
-		"chai": "^3.5.0",
-		"chai-http": "^2.0.1"
+		"mocha": "^5.0.1"
 	},
 	"scripts": {
 		"test": "mocha"
